app-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-kafka-deployment
  labels:
    app: broker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:2.5.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: app-votacao-kafka-service
spec:
  selector:
    app: broker
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
