app-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mysql-deployment
  labels:
    app: mysql

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: votacao-mysql-vol
          ports:
            - containerPort: 3306
      volumes:
        - name: votacao-mysql-vol
          persistentVolumeClaim: mysql-volume

---
apiVersion: v1
kind: Service
metadata:
  name: app-votacao-mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
