app-zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-zookeeper-deployment
  labels:
    app: zookeeper

spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.6.1
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: app-votacao-zookeeper-service
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
